Patched the Pico C library to make it compatible with x86_64
Only minor changes were required, all due to invalid uint32_t <-> pointer casts
in the source code.

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,15 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#############
+## C
+#############
+*.o
+*.obj
+*.a
+*.lib
+*.so
+*.dll
+*.dylib
+*.d
